<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_10_hint">10%</string>
    <string name="btn_20_hint">20%</string>
    <string name="btn_15_hint">15%</string>
    <string name="tv_tip_hint">"Tip is: "</string>
    <string name="et_billamt_hint">Enter bill amount</string>
    <string name="tv_tipamt_hint">Tip Amount</string>

</resources>
