<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10"
        android:layout_alignBottom="@+id/btn10"
        android:layout_centerHorizontal="true"
        android:onClick="calc_15tip"
        android:text="@string/btn_15_hint" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etAmount"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="88dp"
         android:onClick="calc_10tip"       
        android:text="@string/btn_10_hint" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15"
        android:layout_alignBottom="@+id/btn15"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:onClick="calc_20tip"        
        android:text="@string/btn_20_hint" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn20"
        android:layout_marginBottom="96dp"
        android:gravity="right"
        android:hint="@string/tv_tipamt_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvBillAmtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etAmount"
        android:layout_alignBottom="@+id/etAmount"
        android:layout_alignParentLeft="true"
        android:text="Bill Amount:" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:layout_toRightOf="@+id/btn10"
        android:ems="10"
        android:hint="@string/et_billamt_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTip"
        android:layout_alignRight="@+id/btn10"
        android:text="Tip is:" />

</RelativeLayout>
